# prism

./: .dockerignore  .gitignore  .importlinter  Dockerfile  PRISM-PRD-v0.1-clean.docx  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/decisions/: 0001-canonical-stack.md  0002-pinned-lockfile.md  0003-tenant-id-rollout.md  0004-audit-sink.md  0005-correlation-ids.md  0006-ucp-integration.md  README.md
infrastructure/mcp_servers/: server_config.json
scripts/: check_layer_coverage.py
src/prism/: __init__.py  bootstrap.py
src/prism/agentic_cx/: __init__.py
src/prism/catalogue/: __init__.py
src/prism/commerce/: __init__.py
src/prism/demo/: __init__.py  run.py
src/prism/discovery/: __init__.py
src/prism/gateway/: __init__.py
src/prism/intelligence/: __init__.py
src/prism/payment/: __init__.py
src/prism/tryon/: __init__.py
tests/agentic_cx/application/: test_handle_message.py
tests/agentic_cx/domain/: test_conversation.py  test_conversation_service.py
tests/catalogue/: __init__.py
tests/catalogue/application/: __init__.py  test_ingest_product.py
tests/catalogue/domain/: __init__.py  test_product.py
tests/commerce/: __init__.py
tests/commerce/application/: __init__.py  test_commerce_sync_workflow.py  test_process_ucp_event.py
tests/commerce/domain/: __init__.py  test_commerce_event.py
tests/discovery/: __init__.py
tests/gateway/: __init__.py
tests/mcp/: test_mcp_schema_round_trip.py
tests/payment/: __init__.py
tests/shared/: test_audit.py  test_observability.py
tests/tryon/: __init__.py
(+319 files in other folders)
