[project]
name = "prism"
version = "0.1.0"
description = "PRISM - Unified Commerce Intelligence Platform for luxury retail"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6,<3",
    "fastapi>=0.111,<1",
    "uvicorn>=0.29,<1",
    "httpx>=0.27,<1",
    "structlog>=24.1,<25",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
gcp = [
    "mcp>=1.0,<2",
    "google-cloud-bigquery>=3.20,<4",
    "google-cloud-aiplatform>=1.50,<2",
    "google-cloud-storage>=2.16,<3",
    "google-cloud-pubsub>=2.21,<3",
    "google-cloud-firestore>=2.16,<3",
    "google-cloud-run>=0.10,<1",
    "grpcio>=1.62,<2",
]

dev = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "mypy>=1.9,<2",
    "ruff>=0.3,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
